opam-version: "2.0"
name: "olox"
synopsis: "An OCaml interpreter for Lox"
version: "0.0.1"
maintainer: "Kevin Ji"
authors: ["Kevin Ji"]
homepage: "https://github.com/kevinji/olox"
bug-reports: "https://github.com/kevinji/olox/issues"
dev-repo: "git+https://github.com/kevinji/olox.git"
license: "MIT"

build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" { >= "4.08" }
  "dune" { >= "1.11" }
  "angstrom" { >= "0.11" }
  "async" { >= "v0.12" }
  "core" { >= "v0.12" }
  "ppxlib" { >= "0.8" }
  "ppx_jane" { >= "v0.12" }
]
