opam-version: "2.0"
name: "olox"
synopsis: "An OCaml interpreter for Lox"
version: "0.0.1"
maintainer: "Kevin Ji"
authors: ["Kevin Ji"]
homepage: "https://github.com/kevinji/olox"
bug-reports: "https://github.com/kevinji/olox/issues"
dev-repo: "git+https://github.com/kevinji/olox.git"
license: "MIT"

build: [
  [ "dune" "subst" ] { pinned }
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" { >= "5.1" }
  "dune" { >= "3.14" }
  "angstrom" { >= "0.16" }
  "async" { >= "v0.16" }
  "core" { >= "v0.16" }
  "core_unix" { >= "v0.16" }
  "ppx_jane" { >= "v0.16" }
]
